UX: Fix mobile padding-top on mobile, follow up to da5841d (#10982)

--- a/app/assets/stylesheets/mobile/discourse.scss
+++ b/app/assets/stylesheets/mobile/discourse.scss
@@ -138,6 +138,11 @@ blockquote {
 }
 
 // Special elements
+
+#main-outlet {
+  padding-top: 0.25em;
+}
+
 #main {
   position: relative;
 }
